end point projects with documentation done
