# HolidaysApp-Backend/driving/api-rest/contracts/holidayapp-openapi-v3.yaml
@@ -12,6 +12,8 @@ tags: # Opcional: para agrupar endpoints
     description: An API CRUD to manage organizations
   - name: Roles
     description: An API CRUD to manage roles
+  - name: Projects
+    description: An API CRUD to manage projects
 paths: # Todos los endpoints de la API
   /api-rest/organizations:
     get:
@@ -230,7 +232,7 @@ paths: # Todos los endpoints de la API
       tags:
         - Organizations
       summary: Get Organization by ID
-      description: Get a Organization of Organizations APIs
+      description: Get a Organization of Organizations APIs by ID
       operationId: getOrganizationById
       parameters:
         - name: organizationId
@@ -441,6 +443,80 @@ paths: # Todos los endpoints de la API
                 type: array
                 items:
                   $ref: '#/components/schemas/RoleDTO'
+  /api-rest/projects:
+    get:
+      tags:
+        - Projects
+      summary: Get all projects (optionally filtered by name)
+      description: Get all projects or filter by name using query parameter
+      operationId: getAllProjects
+      parameters:
+        - name: name
+          in: query
+          description: Optional name to filter projects
+          required: false
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ProjectDTO'
+        "400":
+          description: Wrong Request – invalid parameters
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: invalid parameters
+
+        "401":
+          description: Not authorized – invalid or expired token
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: No valid token provided
+
+        "403":
+          description: Denied – no permission to access the resource
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: You do not have permission to access this resource
+
+        "404":
+          description: Project not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: The Project was not found
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ProjectDTO'
 
 components:
   schemas:
@@ -466,4 +542,28 @@ components:
           type: integer
           #format: int32
         name:
+          type: string
+    ProjectDTO:
+      description: This is the Project model
+      type: object
+      properties:
+        id:
+          type: integer
+          #format: int32
+        name:
+          type: string
+        description:
+          type: string
+        startDate:
+          type: string
+          format: date
+        expectedEndDate:
+          type: string
+          format: date
+        realEndDate:
+          type: string
+          format: date
+        projectState:
+          type: string
+        projectType:
           type: string
